Update in Skills

--- a/index.html
+++ b/index.html
@@ -92,12 +92,12 @@
                     <div class="skill-tooltip">Git</div>
                 </li>
                 <li class="skill-item">
-                    <img src="imgaes/java.jpg" alt="Java Logo">
+                    <img src="images/java.jpg" alt="Java Logo">
                     <div class="skill-tooltip">Java</div>
                 </li>
                 <li class="skill-item">
                     <img src="images/docker.png" alt="Docker Logo">
-                    <div class="sill-item">Docker</div>
+                    <div class="sill-tooltip">Docker</div>
                 </li>
             </ul>
         </div>
