--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 </li>
                 <li class="skill-item">
                     <img src="images/docker.png" alt="Docker Logo">
-                    <div class="sill-tooltip">Docker</div>
+                    <div class="skill-tooltip">Docker</div>
                 </li>
             </ul>
         </div>
