Update in Portfolio

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <h3 id="hello2">Here's who I am & what I do</h3>
             <p>
                 Hi, I'm Hassan Muhammed Ahsan. I'm an aspiring developer with a keen interest in creating meaningful and innovative projects. I love to explore new technologies and leverage them to build exciting applications.
-            <p> This Portfolio is in the First Phase of Development, the developer(I, my self) will be available to make changes with in few days.
+            <p> This Portfolio is in the First Phase of Development,  will be available completed with in few days.
             </p>
             </p>
             <p>
