--- a/projects.html
+++ b/projects.html
@@ -42,13 +42,14 @@
                 <div class="portfolio-image2">
                     <img src="images/multi-label-classification.png" alt="multi-label-classification">
                 </div>
-                <h3>MULTI-LABEL CLASSIFICATION FOR LAND COVER DETECTION</h3>
+                <h3>TEXT TO SPEECH CONVERSION</h3>
                 <p>
                 <ul class="portfolio-li">
-                    <li>Executed a Transfer learning approach to identify the land cover features from a given multi-spectral image consisting
-                    of 12 bands from Sentinel-2 Satellite</li>
-                    <li>Analyzed the raster bands reactivity to different land forms based on resolutions</li>
-                    <li>Obtained a recall of 63.80 for all the bands and a recall of 63.00 when used the RGB bands for prediction</li>
+                    <li>Executed a working model of text-to-speech conversion machine learning model </li>
+                    <li>Model is used for conversion of native speech to native text followed by transliteration into English and
+                        back to English Audio</li>
+                    <li>The model was said to be integrated into a banking app using blockchain</li>
+                    <li>Technologies used: Python, PyDuB, Graphql,RNN & HMM </li>
                 </ul>
                 </p>
             </div>
@@ -56,11 +57,11 @@
                 <div class="portfolio-image3">
                     <img src="images/nymap.png" alt="neighborhoods">
                 </div>
-                <h3>NEIGHBOURHOOD ANALYSIS USING PYTHON</h3>
+                <h3>CLASSIFICATION FOR CLOSED EYES</h3>
                 <p>
                 <ul class="portfolio-li">
-                    <li>Analyzed the neighborhoods of New York City and identified areas with high potential for Indian Cuisine Restaurants</li>
-                    <li>Identified localities preferable to live where Indian Cuisine Restaurants are available using a rating scale of 10</li>
+                    <li>Analyzed whether the eyes are closed or open, this can be done in a live feed  or recorded video</li>
+                    <li>Implementation </li>
                 </ul>
                 </p>
             </div>
@@ -85,15 +86,12 @@
                 <div class="portfolio-image">
                     <img src="images/blogging-website.png" alt="neighborhoods">
                 </div>
-                <h3>BLOGGING WEBSITE</h3>
+                <h3>PERSONAL PORTFOLIO</h3>
                 <p>
                 <ul class="portfolio-li">
-                    <li>Spearheaded the development of a Blogging Website using HTML, CSS, JavaScript, PHP, and MySQL. Implemented user
-                    authentication, message posting, and reply functionalities.</li>
-                    <li>Orchestrated the deployment of the website on a local server using XAMPP, facilitating Apache and MySQL server
-                    management.</li>
-                    <li>Collaborated with a team to create a blogging platform with robust features, incorporating user authentication, message
-                    posting, and reply functionalities.</li>
+                    <li>developed personal portfolio website using HTML, CSS, and JavaScript.</li>
+                    <li>Orchestrated the deployment of the website on a local server using GitHub, facilitating management.</li>
+                    <li></li>
                 </ul>
                 </p>
             </div>
