--- a/projects.html
+++ b/projects.html
@@ -40,7 +40,7 @@
             </div>
             <div class="portfolio-item">
                 <div class="portfolio-image2">
-                    <img src="images/multi-label-classification.png" alt="multi-label-classification">
+                    <img src="images/multi-label-classification.png" alt="text-to-speech-conversion">
                 </div>
                 <h3>TEXT TO SPEECH CONVERSION</h3>
                 <p>
@@ -55,7 +55,7 @@
             </div>
             <div class="portfolio-item">
                 <div class="portfolio-image3">
-                    <img src="images/nymap.png" alt="neighborhoods">
+                    <img src="images/nymap.png" alt="classification-for-closed-eyes">
                 </div>
                 <h3>CLASSIFICATION FOR CLOSED EYES</h3>
                 <p>
@@ -67,7 +67,7 @@
             </div>
             <div class="portfolio-item">
                 <div class="portfolio-image">
-                    <img src="images/twitter-image.jpeg" alt="neighborhoods">
+                    <img src="images/twitter-image.jpeg" alt="twitter-sentimental-analysis">
                 </div>
                 <h3>TWITTER SENTIMENT ANALYSIS</h3>
                 <p>
@@ -84,7 +84,7 @@
             </div>
             <div class="portfolio-item">
                 <div class="portfolio-image">
-                    <img src="images/blogging-website.png" alt="neighborhoods">
+                    <img src="images/blogging-website.png" alt="Portfolio">
                 </div>
                 <h3>PERSONAL PORTFOLIO</h3>
                 <p>
