Update in Index

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <!-- Navigation Bar -->
     <div class="topnav">
-        <h4 onclick="clickName()">Hassan Muhammed Ahsan</h4>
+        <h4 onclick="clickName()" style="font-style: italic;">Hassan Muhammed Ahsan</h4>
         <a href="/" class="active">Home</a>
         <a href="resume.pdf" target="_blank">Resume</a>
         <a href="projects.html">Projects</a>
