--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     <img src="images/prepinsta-logo-new.png" alt="PrepInsta">
                 </div>
                 <h3>Data Analytics Intern</h3>
-                <h4>PrespInsta | <\<em>Jan 2024 - Current</em></h4>
+                <h4>PrespInsta | <em>Jan 2024 - Current</em></h4>
                 <ul class="portfolio-li">
                     <li> Real-time data is used for Python exploratory data analysis activities such as visual exploration, data profiling, and data cleansing. correlation analysis,
                     learning new things, and seeing trends. Understanding the fundamental structure and characteristics of the data is a critical stage in this process.</li> 
@@ -119,7 +119,7 @@
                     dashboard creation by gathering current and pertinent data from the internet.</li>
                 </ul>
             </div>
-            <div class="experience-image">
+            <div class="experience-item">
                     <img src="images/Samsung-Logo728_410.jpg" alt="Samsung">
                 </div>
                 <h3>Research Intern</h3>
