Update in Experience

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     dashboard creation by gathering current and pertinent data from the internet.</li>
                 </ul>
             </div>
-            <div class="experience-item">
+            <div class="experience-image">
                     <img src="images/Samsung-Logo728_410.jpg" alt="Samsung">
                 </div>
                 <h3>Research Intern</h3>
