--- a/projects.html
+++ b/projects.html
@@ -89,9 +89,9 @@
                 <h3>PERSONAL PORTFOLIO</h3>
                 <p>
                 <ul class="portfolio-li">
-                    <li>developed personal portfolio website using HTML, CSS, and JavaScript.</li>
-                    <li></li>
-                    <li></li>
+                    <li>Developed personal portfolio website using HTML, CSS, and JavaScript</li>
+                    <li>To demonstrate my avid for skills and achievements</li>
+                    <li>Showcase my experience in different domains</li>
                 </ul>
                 </p>
             </div>
